--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-sm-6 col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
-        <div id="success" class="alert alert-succes" {{#if noMessages}}hidden{{/if}}>
+        <div id="success" class="alert alert-danger" {{#if noMessages}}hidden{{/if}}>
             {{successMsg}}
         </div>
     </div>
