update storing data order

--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -13,50 +13,50 @@
 
                 <div class="col-md-12">
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" name="" id="name" class="form-control" required>
+                        <label for="name">nama</label>
+                        <input type="text" name="" id="name" class="form-control" value="{{name}}" required>
                     </div>
                 </div>
                 
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="address">address</label>
-                        <input type="text" id="address" class="form-control" required>
+                        <input type="text" id="address" class="form-control" value="bogor, westjava" required>
                     </div>
                 </div>
 
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="card-name">Card holder name</label>
-                        <input type="text" id="card-name" class="form-control" required>
+                        <input type="text" id="card-name" class="form-control" value="yasa" required>
                     </div>
                 </div>
 
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="card-number">Credit card number</label>
-                        <input type="text" id="card-number" class="form-control" required>
+                        <input type="text" id="card-number" class="form-control" value="4242424242424242" required>
                     </div>
                 </div>
 
                  <div class="col-md-6">
                     <div class="form-group">
                         <label for="card-expiry-month">Expiration month</label>
-                        <input type="text" id="card-expiry-month" class="form-control" required>
+                        <input type="text" id="card-expiry-month" class="form-control" value="12" required>
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="card-expiry-year">Expiration year</label>
-                        <input type="text" id="card-expiry-year" class="form-control" required>
+                        <input type="text" id="card-expiry-year" class="form-control" value="2021" required>
                     </div>
                 </div>
 
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="card-cvc">CVC</label>
-                        <input type="text" id="card-cvc" class="form-control" required>
+                        <input type="text" id="card-cvc" class="form-control" value="123" required>
                     </div>
                 </div>
 
