--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,8 +1,8 @@
 <br>
 
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-sm-6 col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
+    <div class="col-md-2"></div>
+    <div class="col-sm-6 col-sm-6 col-md-8 col-md-offset-8 col-sm-offset-3" align="center">
         <div id="success" class="alert alert-danger" {{#if noMessages}}hidden{{/if}}>
             {{successMsg}}
         </div>
